[tool.poetry]
name = "python-caw"
version = "0.0.3"
description = "A Python package for wrapping common Crypto APIs like Etherscan, Messari, CoinGecko, and Coin Market Cap"
packages = [
  { include = "pycaw" }
]
authors = ["Unique-Divine <realuniquedivine@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
web3 = "^5.30.0"
eth-utils = "1.9.5"
python-dotenv = "^0.20.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
